Removed PUT /files/meta/directories
It's useless
